@@ -27,6 +27,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   from rel="nofollow" on external links
 * (bug 12970) Added $wgForceClientThumbnails to force client rendering of thumbs,
   instead of falling back to GD.
+* Added $wgRedirectOnLogin to allow specifying a specifc page to redirect users
+  to upon logging in (ex: "Main Page")
 
 === New features in 1.15 ===
 
@@ -127,6 +129,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   of $wgSpamRegex for edit summary checks. Text checks still use $wgSpamRegex.
 * New function to convert content text to specified language (only applies on wiki with
   LanguageConverter class)
+* (bug 17844) Redirect users to a specific page when they log in, see 
+  $wgRedirectOnLogin
 
 === Bug fixes in 1.15 ===
 * (bug 16968) Special:Upload no longer throws useless warnings.
